# sandwich

./: .gitignore  LICENSE  README.md  download.py  fdusd.py  pyproject.toml  usdtperp.py
src/sandwich/: __init__.py  __main__.py  download.py  process.py
src/sandwich/binance/: pairs.py
src/sandwich/coingecko/: markets.py
src/sandwich/hyperliquid/: __init__.py  pairs.py
