[project]
name = "sandwich"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "T. Budiman", email = "tbudiman@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "ccxt>=4.3.98",
    "typer>=0.12.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
sandwich = "sandwich:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sandwich"]
